--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     
     <div class="container">
 
-        <div id="game-board">
+        <div class="options">
+            <div>
+                <span>Läbi seinte:</span><input type="checkbox" id="through-walls">
+            </div>
+            <div>
+                <span>Kiirus kasvab:</span><input type="checkbox" id="speed-up">
+            </div>
+        </div>
+
+        <div class="main">
+
+            <div id="message"></div>
+
+            <div class="score-container">
+                <div>Skoor: <span id="current-score"></span></div>
+                <div>Reks: <span id="high-score"></span></div>
+            </div>
+
+            <div id="game-board">
+            </div>
+
+            <button id="reset-game" class="hidden">Alusta uuesti</button>
+
         </div>
 
     </div>
